Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-6995

False-positive DCHECK when converting whitespace-only strings to timestamp

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • Impala 3.0, Impala 2.12.0
    • Impala 2.13.0, Impala 3.1.0
    • Backend

    Description

      select cast(' ' as timestamp);
      
      F0508 14:32:07.245255 11824 timestamp-parse-util.cc:241] Check failed: dt_ctx->fmt_len > 0 (0 vs. 0) 
      *** Check failure stack trace: ***
          @          0x428956d  google::LogMessage::Fail()
          @          0x428ae12  google::LogMessage::SendToLog()
          @          0x4288f47  google::LogMessage::Flush()
          @          0x428c50e  google::LogMessageFatal::~LogMessageFatal()
          @          0x1c3f485  impala::TimestampParser::ParseFormatTokensByStr()
          @          0x1c40553  impala::TimestampParser::Parse()
          @          0x1c4712a  impala::TimestampValue::Parse()
          @          0x2e5d8fa  impala::CastFunctions::CastToTimestampVal()
          @          0x2e45322  impala::ScalarFnCall::InterpretEval<>()
          @          0x2e27de5  impala::ScalarFnCall::GetTimestampVal()
          @          0x2de72de  impala::ScalarExprEvaluator::GetValue()
          @          0x2de6e69  impala::ScalarExprEvaluator::GetValue()
          @          0x1d1dbbf  Java_org_apache_impala_service_FeSupport_NativeEvalExprsWithoutRow
          @     0x7fb7cc1d07e8  (unknown)
      Picked up JAVA_TOOL_OPTIONS: -agentlib:jdwp=transport=dt_socket,address=30000,server=y,suspend=n 
      Wrote minidump to /home/tarmstrong/Impala/incubator-impala/logs/cluster/minidumps/impalad/42afc7f9-5b4a-4ed7-b34ad782-d7904747.dmp
      

      It seems to work fine on a release build.

      Attachments

        Issue Links

          Activity

            People

              tarmstrong Tim Armstrong
              tarmstrong Tim Armstrong
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: